package com.cultureclub.cclub.entity;

public enum ClaseEvento {
    feria,
    concierto,
    desfile,
    teatro,
    exposicion,
    festival,
    fiesta,
    mercadillo,
    taller,
    otro
}
