package com.cultureclub.cclub.entity;

public enum TipoEntrada {
    General,
    VIP,
    Anticipada
}
